--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://auzon.github.io/base-calculator",
-  "name": "base-calculator",
+  "homepage": "http://auzon.github.io/BaseCalculator",
+  "name": "BaseCalculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
